--- a/stylesheet.css
+++ b/stylesheet.css
@@ -58,6 +58,9 @@ body{
     font-size: 32px;
     font-weight: 700;
 }
+.home-content h3 span{
+    color: #0ef;
+}
 .home-content h1{
     font-size: 56px;
     font-weight: 700;
@@ -84,4 +87,20 @@ body{
     background: #0ef;
     color: #081b29;
     box-shadow: 0 0 20px #0ef;
+}
+.btn-box{
+    display: inline-block;
+    padding: 12px 28px;
+    background: #0ef;
+    border-radius: 40px;
+    font-size: 16px;
+    color: #081b29;
+    letter-spacing: 1px;
+    text-decoration: none;
+    font-weight: 600;
+}
+.btn-box:hover{
+    box-shadow: 0 0 5px cyan,
+    0 0 25px cyan, 0 0 50px cyan,
+    0 0 100px cyan, 0 0 200px cyan
 }
