--- a/stylesheet.css
+++ b/stylesheet.css
@@ -37,6 +37,8 @@ body{
     font-weight: 500;
     margin-left: 35px;
     transition: .3s;
+    opacity: 0;
+    animation: slideTop .5s ease forwards;
 }
 .navbar a:hover{
     color: #0ef;
@@ -60,6 +62,8 @@ body{
 .home-content h3 {
     font-size: 32px;
     font-weight: 700;
+    animation: slideBottom 1s ease forwards;
+    animation-delay: .7s;
 }
 .home-content h3:nth-of-type(2){
     margin-bottom: 30px;
@@ -72,9 +76,13 @@ body{
     font-size: 56px;
     font-weight: 700;
     margin: -3px 0;
+    animation: slideRight 1s ease forwards;
+    animation-delay: .1s;
 }
 .home-content p {
     font-size: 20px;
+    opacity: 0;
+    animation: slideLeft 1s ease forwards;
 }
 .home-sci a{
     display: inline-flex;
@@ -113,6 +121,36 @@ body{
 }
 
 @keyframes slideRight {
+    0% {
+        transform: translateX(-100px);
+        opacity: 0;
+    }
+    100% {
+        transform: translateX(0px);
+        opacity: 1;
+    }
+}
+@keyframes slideLeft {
+    0% {
+        transform: translateX(-100px);
+        opacity: 0;
+    }
+    100% {
+        transform: translateX(0px);
+        opacity: 1;
+    }
+}
+@keyframes slideTop {
+    0% {
+        transform: translateY(100px);
+        opacity: 0;
+    }
+    100% {
+        transform: translateY(0px);
+        opacity: 1;
+    }
+}
+@keyframes slideBottom {
     0% {
         transform: translateX(-100px);
         opacity: 0;
