--- a/stylesheet.css
+++ b/stylesheet.css
@@ -62,8 +62,9 @@ body{
 .home-content h3 {
     font-size: 32px;
     font-weight: 700;
+    opacity: 0;
     animation: slideBottom 1s ease forwards;
-    animation-delay: .7s;
+    animation-delay: .2s;
 }
 .home-content h3:nth-of-type(2){
     margin-bottom: 30px;
@@ -96,6 +97,10 @@ body{
     font-size: 20px;
     color: #0ef;
     text-decoration: none;
+    transition: .5s ease;
+    opacity: 0;
+    animation: slideLeft 1s ease forwards;
+    animation-delay: calc(.2s * var(--i));
     margin: 30px 15px 30px 0;
 }
 .home-sci a:hover {
@@ -132,7 +137,7 @@ body{
 }
 @keyframes slideLeft {
     0% {
-        transform: translateX(-100px);
+        transform: translateX(100px);
         opacity: 0;
     }
     100% {
@@ -152,11 +157,11 @@ body{
 }
 @keyframes slideBottom {
     0% {
-        transform: translateX(-100px);
+        transform: translateY(-100px);
         opacity: 0;
     }
     100% {
-        transform: translateX(0px);
+        transform: translateY(0px);
         opacity: 1;
     }
 }
