--- a/stylesheet.css
+++ b/stylesheet.css
@@ -118,6 +118,11 @@ body{
     letter-spacing: 1px;
     text-decoration: none;
     font-weight: 600;
+    opacity: 0;
+    animation: slideTop 1s ease forwards;
+    animation-delay: 1.5s;
+    box-shadow: 0 0 5px #0ef,
+    0 0 25px #0ef
 }
 .btn-box:hover{
     box-shadow: 0 0 5px cyan,
