--- a/stylesheet.css
+++ b/stylesheet.css
@@ -5,7 +5,7 @@
     font-family: 'poppins', sans-serif;
 }
 body{
-    color: #ededed;
+    color: #ffffff;
 }
 .header{
     position: fixed;
@@ -18,6 +18,7 @@ body{
     justify-content: space-between;
     align-items: center;
     z-index: 100;
+    background-color: #081b29;
 }
 .logo{
     position: relative;
