--- a/chale hotel/style.css
+++ b/chale hotel/style.css
@@ -75,3 +75,30 @@ a.reserva {
     float: right;
 
 }
+/*
+Barra vertical
+*/
+#menu {
+    margin-top: 15px;
+}
+ul{
+    list-style: none;
+}
+ul#navegaçao{
+    float: left;
+}
+ul#navegaçao a {
+    text-transform: uppercase;
+    font-size: 0.8em;
+    padding: 5px;
+    color: #6e672c;
+    line-height: 30px;
+}
+ul#navegaçao a:hover {
+    background: #fdf6be;
+}
+.depoimento {
+    width: 226px;
+    height: 164px;
+    float: right;
+}
