--- a/chale hotel/style.css
+++ b/chale hotel/style.css
@@ -8,7 +8,7 @@ body{
     margin: 15px;
 }
 #container {
-    background: #ede9cc;
+    background: #ede9cc url(imagens/bg-container.png) top center repeat-y;
     margin: 0 auto;
     min-width: 740px;
     max-width: 1180px;
@@ -101,4 +101,23 @@ ul#navegaçao a:hover {
     width: 226px;
     height: 164px;
     float: right;
+}
+#area-principal {
+padding: 15px 0;
+float: left;
+width: 50%;
+background: url(imagens/bg-area-principal.png) top left repeat-x;
+}
+#area-lateral {
+    padding: 20px 0;
+float: right;
+width: 50%;
+background: url(imagens/bg-area-lateral.png) top left repeat-x;
+}
+.conteudo {
+    margin: 0 auto;
+    width: 90%;
+}
+#rodape {
+    clear: both;
 }
